After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 686390 - Timeout was reached while joining a domain
Timeout was reached while joining a domain
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: User Accounts
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-10-18 15:59 UTC by Stef Walter
Modified: 2012-10-19 08:48 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
user-accounts: Set timeouts on all realmd interface proxies (2.07 KB, patch)
2012-10-18 16:43 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-10-18 15:59:11 UTC
While joining a domain I see 'Failed to join domain' Timeout was reached

This is with gnome-control-center from git master. Will look into it.
Comment 1 Stef Walter 2012-10-18 16:43:20 UTC
Created attachment 226752 [details] [review]
user-accounts: Set timeouts on all realmd interface proxies

If we discover domains again, don't add them twice to the drop
down and confuse the user. This is especially important if we 
receive two realms from realmd for the same domain for use with
different clients (ie: sssd/winbind). We only want to offer the
first choice

We may already have a domain listed in the drop down, and then it
gets discovered again (via typing). 

This is a regression from when we refactored UmRealmManager to
use GDBusObjectManagerClient.
Comment 2 Stef Walter 2012-10-18 16:44:33 UTC
(In reply to comment #1)
> Created an attachment (id=226752) [details] [review]
> user-accounts: Set timeouts on all realmd interface proxies

Er, that was the right patch but the wrong comment on it.

This is a regression from when we refactored UmRealmManager to
use GDBusObjectManagerClient.

If possible I would like to see this get into the gnome-3-6 branch.
Comment 3 Bastien Nocera 2012-10-19 08:19:41 UTC
Review of attachment 226752 [details] [review]:

++
Comment 4 Stef Walter 2012-10-19 08:47:56 UTC
Attachment 226752 [details] pushed as 11b5c87 - user-accounts: Set timeouts on all realmd interface proxies